thêm test cho nạp rút